# mtn-django-inventory

./: .gitignore  README.md  pyproject.toml
inventory/: admin.py  apps.py  conf.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_labelformat.py  0003_add_item_model.py  0004_add_itemmodel_price.py  0005_add_itemmodel_category.py  0006_add_item_condition.py
inventory/templates/admin/inventory/item/: change_list.html
inventory/templates/inventory/: admin_csv_import.html  label_print.html
