[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtn-django-inventory"
version = "0.1.0"
description = "Reusable Django app for inventory management"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = ["django-debug-toolbar"]

[tool.hatch.build.targets.wheel]
packages = ["inventory"]

[project.urls]
Homepage = "https://github.com/FullBoreStudios/mtn-django-inventory"
