[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtn-django-inventory"
version = "0.3.3"
description = "Reusable Django app for inventory management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "qrcode>=8.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["django-debug-toolbar"]

[tool.hatch.build.targets.wheel]
packages = ["inventory"]

[project.urls]
Homepage = "https://github.com/FullBoreStudios/mtn-django-inventory"
